[FIX] XQuery: path optimization if focus is nested